--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ nav>ul>li {
 }
 
 h1 {
-    font-size: 10em;
+    font-size: 5em;
     color: white;
 }
 
@@ -35,6 +35,8 @@ a {
     padding-bottom: 20px;
 }
 
+h2,
+p,
 label {
     color: white;
 }
