--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,42 +1,90 @@
+* {
+    /* Responsive, Inclus la bordure et le padding dans la taille de la boîte */
+    box-sizing: border-box;
+    /* Provisoire */
+    border: 1px dashed white;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+
+body{
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    background-color:white;
+    padding: 16px;
+}
+
+.header__search {
+    display: flex;
+   height: 30px;
+  
+}
+.icon{
+    width: 20px;
+    margin-left: 5px;
+}
+.logo{
+    width: 50px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
 body {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-
-    background-color: tomato;
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
 }
 
-a,
-a:visited {
-    color: white;
+h1, h2, h3,h4,h5,h6{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-nav>ul {
+
+/* SIZING */
+.mw-1200 {
+    max-width: 1200px;
+}
+
+.mw-600 {
+    max-width: 600px;
+}
+/* SPACING */
+.m-auto {
+    margin: auto;
+}
+.p-1 {
+    padding: 16px; /*1em = 1rem = 16px*/
+}
+
+/* FLEX Parent - container */
+.d-flex {
     display: flex;
 }
+.wrap {
+    flex-wrap: wrap;
+}
+.jc-center {
+    justify-content: center;
+}
+.jc-sa {
+    justify-content: space-around;
+}
+.align-center{
+    align-items: center;
+}
+/* FLEX Enfant - item */
 
-nav>ul>li {
-    padding: 10px;
-    list-style: none;
-    font-size: 1.5em;
-    color: white;
+.f-1-300  {
+    flex-grow: 1;
+    flex-shrink: 1;
+    /* remplace width */
+    flex-basis: 300px;
 }
 
-h1 {
-    font-size: 5em;
-    color: white;
-}
-
-a {
-    text-decoration: none;
-}
-
-#form-login div {
-    padding-bottom: 20px;
-}
-
-h2,
-p,
-label {
-    color: white;
-}
+/* UTILITIES */
+/* COMPONENTS */
+/* TYPO */
