--- a/asset/style.css
+++ b/asset/style.css
@@ -6,7 +6,6 @@
     /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
-
 body{
     font-family: 'Roboto', sans-serif;
     color: black;
@@ -14,8 +13,6 @@ body{
     margin: 0;
     font-size: large;
 }
-
-
 
 header{
     background-color: rgb(48, 188, 55);
@@ -34,16 +31,17 @@ header{
     
 }
 
-
-
+.art-grid{
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
 
 img {
     max-width: 100%;
     height: auto;
     border-radius: 5px;
 }
-
-
 
 h1, h2, h3,h4,h5,h6{
     /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
@@ -55,6 +53,10 @@ h1{
     justify-content: center;
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+.art__header p{
+    min-height: 70px;
 }
 
 .footer__main{
@@ -73,6 +75,20 @@ button{
 
 }
 
+.form-login {
+    padding-bottom: 50px;
+    gap: 16px;
+}
+
+.column{
+    flex-direction: column;
+}
+
+
+.sticky{
+    position: sticky;
+    top:20px;
+}
 
 /* SIZING */
 .mw-1200 {
@@ -82,15 +98,15 @@ button{
 .mw-600 {
     max-width: 600px;
 }
+
 /* SPACING */
 .m-auto {
     margin: auto;
 }
+
 .p-1 {
     padding: 16px; /*1em = 1rem = 16px*/
     justify-content: space-around;
-   
-    
 }
 
 /* FLEX Parent - container */
@@ -101,12 +117,15 @@ button{
 .wrap {
     flex-wrap: wrap;
 }
+
 .jc-center {
     justify-content: center;
 }
+
 .jc-sa {
     justify-content: space-around;
 }
+
 .align-center{
     align-items: center;
     justify-items: space-between;
@@ -119,6 +138,8 @@ button{
     /* remplace width */
     flex-basis: 300px;
     justify-content: space-around;
+    max-height: auto;  /////
+     
 }
 
 .container{
@@ -133,20 +154,35 @@ button{
     justify-content: space-around;
     border-radius: 10px;
     box-shadow: 3px 3px 15px  rgb(01, 01, 02, 0.4);
+   
 }
-
-
 
 .art__header {
     padding: 16px;
     border-radius: 5px;
-    background-color: white;
-    
-    
+    background-color: white;    
 }
 
-.art__summary{
-    
+.art__summary p{
+    min-height: 210px;
+}
+
+.com__system{
+    justify-content: start;
+    flex-direction: column-reverse;
+    padding-bottom: 50px;
+}
+.com__summary{
+    box-sizing:content-box;
+    border: 1px solid rgb(01, 01, 01, 0.1) ;
+    justify-content: space-around;
+    border-radius: 10px;
+    box-shadow: 3px 3px 15px  rgb(01, 01, 02, 0.4);
+    padding: 20px;
+}
+
+.admin__buttons{
+
 }
 
 .art__footer{
