--- a/asset/style.css
+++ b/asset/style.css
@@ -19,22 +19,32 @@ header{
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
+input[type="search"]{
+    padding: 8px;
+    width: 20vw;
+
+}
+
 .menu_element{
    
     justify-content: center;
 }
 
 .button_menu{
-    margin:80px;
     text-decoration: double;
     color: white;
-    
+    display: inline-block;
+    padding: 16px;
 }
 
 .art-grid{
     display: grid;
     grid-gap: 1em;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+.art img{
+    width: 100%;
 }
 
 img {
@@ -66,15 +76,18 @@ h1{
 }
 
 button{
-    
+    border-color: transparent;
     background-color: green;
     border-radius: 25px;
-    padding:16px;
+    padding:8px 16px;
     color: white;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: 300ms;
 
 }
-
+button:hover{
+    background-color: hsl(120, 100%, 35%);
+}
 .form-login {
     padding-bottom: 50px;
     gap: 16px;
@@ -123,7 +136,9 @@ button{
 .wrap {
     flex-wrap: wrap;
 }
-
+.g-1{
+    gap: 16px;
+}
 .jc-center {
     justify-content: center;
 }
@@ -203,9 +218,18 @@ button{
 
 /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
+    /* max-width: 1000px; */
     position: relative;
     margin: auto;
+  }
+
+  .coming-soon{
+    min-height: 40vh;
+    display:flex;
+    justify-content: center;
+    align-items:center ;
+    color: white;
+    background-color: lightgreen;
   }
   
   /* Hide the images by default */
@@ -228,6 +252,33 @@ button{
     border-radius: 0 3px 3px 0;
     user-select: none;
   }
+  .categorie{
+    min-height: 40vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center ;
+    /* color: white;
+    background-color: lightgreen; */
+  }
+
+  .categorie a {
+  
+    border-color: transparent;
+    background-color: green;
+    border-radius: 25px;
+    padding:8px 16px;
+    color: white;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: 300ms;
+    text-decoration: none;
+    margin: 8px;
+    display: inline-block;
+}
+.categorie a:hover{
+    background-color: hsl(120, 100%, 35%);
+}
+  
   
   /* Position the "next button" to the right */
   .next {
@@ -294,9 +345,6 @@ button{
     display: flex;
     justify-content: center;
     align-items: flex-end;
-
-   
-
   }
 
   .slide__text div{
@@ -310,3 +358,4 @@ button{
   .slide__text a{
     color: white;
   }
+
