--- a/asset/style.css
+++ b/asset/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     color: black;
     background-color:white;
     margin: 0;
@@ -15,8 +15,11 @@ body{
 }
 
 header{
-    background-color: rgb(48, 188, 55);
+    background-color: rgb(242, 193, 78);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+main{
+  min-height: 85vh;
 }
 
 input[type="search"]{
@@ -28,6 +31,7 @@ input[type="search"]{
 .menu_element{
    
     justify-content: center;
+    color: white;
 }
 
 .button_menu{
@@ -71,13 +75,13 @@ h1{
 
 .footer__main{
     
-    background-color: rgb(48, 188, 55);
+    background-color: rgb(242, 193, 78);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
 button{
     border-color: transparent;
-    background-color: green;
+    background-color: rgb(243, 153, 7);
     border-radius: 25px;
     padding:8px 16px;
     color: white;
@@ -86,7 +90,7 @@ button{
 
 }
 button:hover{
-    background-color: hsl(120, 100%, 35%);
+    background-color:rgb(187, 117, 4);
 }
 .form-login {
     padding-bottom: 50px;
@@ -207,7 +211,26 @@ button:hover{
 .art__footer{
 
 }
+.admin{
+max-width: 900px;
+margin: auto;
+}
+.admin table{
+  width: 100%;
+  border-collapse: collapse;
 
+}
+.admin th, .admin td {
+  border: 1px solid white;
+  padding: 8px;
+}
+.admin th{
+  background-color:rgb(187, 117, 4);
+  color: white;
+}
+.admin tr:nth-child(even){
+  background-color: rgb(242, 193, 78);
+}
 
 /* UTILITIES */
 /* COMPONENTS */
@@ -221,14 +244,14 @@ button:hover{
     margin: auto;
   }
 
-  .coming-soon{
+  /* .coming-soon{
     min-height: 40vh;
     display:flex;
     justify-content: center;
     align-items:center ;
     color: white;
     background-color: lightgreen;
-  }
+  } */
   
   /* Hide the images by default */
   .mySlides {
@@ -263,7 +286,8 @@ button:hover{
   .categorie a {
   
     border-color: transparent;
-    background-color: green;
+    background-color:rgb(243, 153, 7);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     border-radius: 25px;
     padding:8px 16px;
     color: white;
@@ -274,7 +298,7 @@ button:hover{
     display: inline-block;
 }
 .categorie a:hover{
-    background-color: hsl(120, 100%, 35%);
+    background-color: rgb(187, 117, 4);
 }
   
   
@@ -385,3 +409,8 @@ button:hover{
       display: flex;
     }
   }
+
+
+
+
+  
